--- a/app/package.json
+++ b/app/package.json
@@ -36,8 +36,10 @@
 	"type": "module",
 	"dependencies": {
 		"bits-ui": "^0.21.7",
+		"chart.js": "^4.4.2",
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.378.0",
+		"svelte-chartjs": "^3.1.5",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1"
 	}
